--- a/css/style.css
+++ b/css/style.css
@@ -89,9 +89,9 @@ body {
 .heading-secondary {
   font-size: 3.5rem;
   text-transform: uppercase;
-  font-weight: 700;
+  font-weight: 950;
   display: inline-block;
-  background-image: linear-gradient(to right, #03a9f4, #ffeb07, #2196f3, #ff00eb);
+  background-image: linear-gradient(to right, #eb913c, #f3e306, #00bcd4, #ff00eb);
   -webkit-background-clip: text;
   color: transparent;
   position: relative;
@@ -796,7 +796,7 @@ body {
   border-radius: 7rem;
   transition: all .2s;
   position: relative;
-  font-size: 0.8rem;
+  font-size: 1.2rem;
   border: none;
   cursor: pointer; }
 
@@ -915,7 +915,7 @@ body {
       background-image: url(/img/Commerce.PNG); }
   .card__heading {
     font-size: 2.8rem;
-    font-weight: 500;
+    font-weight: 950;
     text-transform: uppercase;
     text-align: right;
     color: #fff;
